fix: Incorrectly inserted space in textcite (https://tex.stackexchange.com/questions/746045/space-in-textcite-postnote-with-make4ht-biblatex-and-authortitle-ticomp/); more link spacing issues.
not: HTML outpout tidied.

--- a/config/main.css
+++ b/config/main.css
@@ -58,6 +58,8 @@ a {
 	text-decoration: none;
 
 	white-space: normal;
+
+	padding-right: 1pt;
 }
 
 
@@ -66,9 +68,12 @@ a[href]:not([href=""]):not(:empty)::after {
 	content: "°";
 	color: #008080;
 	white-space: nowrap;
+	display: inline;
 }
 
-
+.nobr {
+  white-space: nowrap;
+}
 
 header {
 	padding: 0em 0em 1em 0em;
